# Pomodoro_streamlit

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/src/: main.py  test.py
app/src/media/videos/1080p60/partial_movie_files/ExampleOfAnimation/: partial_movie_file_list.txt
streamlit-manim/: pyproject.toml
