[tool.poetry]
name = "pomodoro-streamlit"
version = "0.1.0"
description = ""
authors = ["darthVarada <fafapelegia@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.32.2"
numpy = "^1.26.4"
manim = "^0.18.0"
setuptools = "^69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
